# questions_vote

./: .dockerignore  .gitignore  Dockerfile  ELO_CONVERSION.md  ERROR_HANDLING_IMPROVEMENTS.md  IMPORTER_CONVERSION.md  Makefile  README.md  admin_bot.py  bot.py  db.py  elo.py  fly.toml  go.mod  go.sum  litestream.yml  nextjs_helper.py  package_fetcher.py  package_lister.py  package_parser.py  packages_importer.py  pyproject.toml  questions.db  rate_limiter.py  run_elo.py  std_dev.py  utils.py
.github/workflows/: ci.yml
cmd/admin/: main.go
cmd/bot/: main.go
cmd/importer/: main.go
cmd/tournament_manager/: main.go
console/: helpers.py
db/: __init__.py  db.py  std_dev.py
elo/: __init__.py  elo.py  elo_tester.py
importer/: package_lister.py  package_parser.py  packages_importer.py
internal/db/: connection.go
internal/elo/: elo.go  elo_test.go
internal/handlers/: bot.go  commands.go  formatting.go  voting.go
internal/importer/: nextjs_helper.go  nextjs_helper_test.go  package_lister.go  package_parser.go
internal/models/: package.go  question.go  tournament.go  tournament_question.go  types.go  vote.go
internal/services/: question.go  vote.go
ipython_profiles/profile_main/: ipython_config.py
models/: __init__.py  package.py  question.py  tournament.py  tournament_question.py  vote.py
pkg/ratelimiter/: ratelimiter.go
utils/: __init__.py  utils.py
