[project]
name = "questions-vote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.49.0.0",
    "beautifulsoup4>=4.12.3",
    "ipython>=8.32.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=21.6",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "sentry-sdk>=2.20.0",
]

[tool.ruff]
line-length = 120
